--- a/docs/team/EvonDong.adoc
+++ b/docs/team/EvonDong.adoc
@@ -137,6 +137,9 @@ https://github.com/AY1920S1-CS2103T-T13-3/main/pull/202[(PR #202)]
 
 
 * *Community*
+
+** Created issue labels for milestones v1.4 on Github
+
 ** Reviewed pull requests and offered suggestions (with non-trivial review comments):
 https://github.com/AY1920S1-CS2103T-T13-3/main/pull/221[(PR #221)],
 https://github.com/AY1920S1-CS2103T-T13-3/main/pull/196[(PR #196)]
