--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -33,11 +33,7 @@ image::ArchitectureDiagram.png[]
 
 The *_Architecture Diagram_* given above explains the high-level design of the App. Given below is a quick overview of each component.
 
-[TIP]
-The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
-Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
-
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called link:{repoURL}/src/main/java/mams/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -59,10 +55,7 @@ Each of the four components
 * Defines its _API_ in an `interface` with the same name as the Component.
 * Exposes its functionality using a `{Component Name}Manager` class.
 
-For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java` interface and exposes its functionality using the `LogicManager.java` class.
-
-.Class Diagram of the Logic Component
-image::LogicClassDiagram.png[]
+For example, the `Logic` component (see the class diagram in <<fig-LogicClassDiagram>>) defines it's API in the `Logic.java` interface and exposes its functionality using the `LogicManager.java` class.
 
 [discrete]
 ==== How the architecture components interact with each other
@@ -80,7 +73,7 @@ The sections below give more details of each component.
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/src/main/java/mams/ui/Ui.java[`Ui.java`]
 
 The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `StudentListPanel`, `AppealListPanel`, `ModuleListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
@@ -98,12 +91,18 @@ The `UI` component,
 .Structure of the Logic Component
 image::LogicClassDiagram.png[]
 
+.Structure of the Parser Component
+image::ParserClassDiagram.png[]
+
+.Structure of the Command Component
+image::CommandClassDiagram.png[]
+
 *API* :
-link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/mams/logic/Logic.java[`Logic.java`]
 
 .  `Logic` uses the `MamsParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
-.  The command execution can affect the `Model` (e.g. adding a module).
+.  The command execution can affect the `Model` (e.g. adding a module to a student).
 .  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
 .  In addition, the `CommandResult` object can also instruct the `Ui` to perform certain actions, such as displaying help to the user.
 
@@ -120,7 +119,7 @@ NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X) but du
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/mams/model/Model.java[`Model.java`]
 
 The `Model`,
 
@@ -159,6 +158,7 @@ This section describes some noteworthy details on how certain features are imple
 The find feature is facilitated by `FindCommand` class. The `FindCommand` stores a `List` of `Predicates`, which can be
 StudentContainsKeywordsPredicate`, `ModuleContainsKeywordsPredicate`, or `AppealContainsKeywordsPredicate`. Each `Predicate` stores a `List` of String of keywords.
 
+.Predicate Class Diagram
 image::PredicateClassDiagram.png[]
 
 Each `FindCommand` has a `execute()` method that takes in a `Model` object and a `FilterOnlyCommandHistory` object.
@@ -178,6 +178,7 @@ Step 5. A `CommandResult` object is returned, which contains message about the n
 
 The following sequence diagram shows how the Find command works:
 
+.Find Command Sequence Diagram - user input: "find m/cs1010"
 image::FindSequenceDiagram.png[]
 
 
@@ -193,9 +194,11 @@ There are two additional static classes in `ClashCommand` to facilitate the feat
 
 * `ClashCommandParameters`: Stores the details of the parsed parameters that a `ClashCommand` will operate on.
 
+.ClashCommandParameters Class Diagram
 image::ClashCommandParametersClassDiagram.png[]
 * `ClashCase`: Stores the details of the clash cases between two modules that a `ClashCommand` will operate on.
 
+.ClashCase Class Diagram
 image::ClashCaseClassDiagram.png[]
 
 [NOTE]
@@ -234,6 +237,7 @@ Step 5. Each `ClashCommand` returns a `CommandResult` object which contains the 
 
 The following activity diagram shows how the clash command works:
 
+.Work Flow of Clash Command
 image::ClashCommandActivityDiagram.png[]
 
 ===== Design Consideration: How to deal with different user input formats for different types of checking
