--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -601,7 +601,7 @@ should create a new task with a new date or time (same as "re-scheduling" in the
 
 ==== Editing a revision task: `redit`
 You can edit a revision task with this command. You need to provide non-empty arguments with prefix `h/`, `dt/` and `tm/`
-as you would do with `rn`, but only those fields you want to change. Please take note that *at least one field* must be provided. +
+for fields you want to change. Please take note that *at least one field* must be provided. +
 Format: `redit INDEX [h/HEADING] [dt/DATE] [tm/TIME]` +
 Example: +
 `redit 1 h/CS2100 Logic Circuit dt/15/08/2019 tm/1200`
