--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -256,7 +256,7 @@ Checks if there is clash between the module which a student is requesting to add
 Only appeals requesting to add or drop module will need for clash checks. If the target appeal is not of any of the two
 types, a reminder message will be shown.
 
-Format: `clash [a/INDEX]`
+Format: `clash a/INDEX`
 
 Examples:
 
@@ -278,7 +278,7 @@ Checks if there are clashes in a student’s (pre-allocated) timetable. This com
 there is really a timetable clash in the student's pre-allocated timetable if the student submits an appeal to drop a
 pre-allocated module due to timetable clash.
 
-Format: `clash [s/INDEX]`
+Format: `clash s/INDEX`
 
 Examples:
 
@@ -291,7 +291,7 @@ image::StudentClashDetected.png[width="790"]
 ==== Show clashes between 2 modules
 This command checks to see if the lecture slots of 2 modules clashes, and displays the result to the user.
 
-Format: `clash [m/MODULE_CODE] [m/MODULE_CODE]` or `clash [m/INDEX] [m/INDEX]`
+Format: `clash m/MODULE_CODE m/MODULE_CODE` or `clash m/INDEX m/INDEX`
 
 Examples:
 
@@ -503,14 +503,14 @@ Sample Output: `Backup "data/mamshistory_Backup_1" restored!`
 - e.g. `find a/cs1010 m/data algorithm`
 
 * **clash**:
-** `clash [m/MODULE_CODE] [m/MODULE_CODE]` or `clash [m/INDEX] [M/INDEX]`
+** `clash m/MODULE_CODE m/MODULE_CODE` or `clash m/INDEX m/INDEX`
 - e.g. `clash m/cs1010 m/cs1020` shows clash details between CS1010 and CS1020;
 Or `clash m/2 m/4` to shows clash details between the modules at indices 2 and 4 respectively.
 
-** `clash [s/INDEX]`
+** `clash s/INDEX`
 - e.g. `clash s/2` to shows clash details in a student’s (prea-llocated) timetable.
 
-** `clash [a/INDEX]`
+** `clash a/INDEX`
 - e.g. `clash a/INDEX` to show if the module a student is requesting for clashes with his/her current existing modules.
 
 * **addmod**: `addmod s/STUDENT_ID m/MODULE_CODE` or `addmod i/INDEX m/MODULE_CODE`
