--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -97,10 +97,13 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 * **Team**
 
 ** A team has a team name, a subject to focus on, score, its project name, and its location (table number).
-** A team may also contain one mentor and an arbitrary number of participants (setting of restrictions coming in v2.0).
+(For now, many teams can be grouped in 1 location. setting of restrictions coming in v2.0).
+** A team may also contain one mentor and 5 participants (setting of restrictions coming in v2.0).
 ** Two teams are considered as the same team if and only if they have the same team names or project names.
 
-All entities will also receive a unique ID, which means no two entity will share the same ID. That is, entities with same ID will also be considered as a same entity. This is to be considered for specific commands such as the <<CSV File Formatting>> under the <<Bulk Registration: `import fp/PATH_TO_CSV_FILE [fp/PATH_TO_ERROR_FILE]`, Bulk Registration>> command.
+All entities will also receive a unique ID, which means no two entity will share the same ID.
+That is, entities with same ID will also be considered as a same entity. This is to be considered for specific commands such as the <<CSV File Formatting>> under the <<Bulk Registration: `import fp/PATH_TO_CSV_FILE [fp/PATH_TO_ERROR_FILE]`, Bulk Registration>> command.
+Also, do not that entities are randomly generated and are not necessarily in ascending order.
 
 **`Parameters`**
 
@@ -122,7 +125,8 @@ Must be one of the values below:
 
 `Score` - must be an integer ranging from 0 to 100.
 
-`Location` - must be an integer ranging from 1 to 1000, indicating a table number. Only one team is allowed per table
+`Location` - must be an integer ranging from 1 to 1000, indicating a table number.
+Restrictions of the number of teams per table will be coming in v2.0.
 
 ****
 
@@ -165,6 +169,8 @@ help page in a separate pop-up window.
 * Should you require further information, the pop-up window also includes links to further references and documentation.
 ****
 
+To close the window, run any non-`help` command.
+
 Format: `help`
 
 === Adding an Entity: `add {participant/mentor/team}`
@@ -183,6 +189,7 @@ Use this command to add a new Participant to Alfred to keep track of for your ha
 
 ****
 * Participants have the fields "Name", "Phone number" and "Email address" which you must provide.
+* For now, to cater to an international audience, we do not check for validity of phone numbers.
 ****
 
 Format: `add participant n/NAME p/PHONE_NUMBER e/EMAIL_ADDRESS`
@@ -267,7 +274,7 @@ Deletes an Entity, so that Alfred will no longer keep track of that Entity.
 
 ****
 * Deletes the Entity with the ID that you specify.
-* Note that when you delete a Team, all the participants that are part of that team will also be deleted as well.
+* Note that when you delete a Team, it does not delete the participants or mentors associated with the teams.
 ****
 
 Examples:
@@ -286,16 +293,19 @@ Searches for Entities by selected fields, instead of their ID, in case you find 
 * Take note that the `find` command only searches
 and matches the fields whose strings are a substring of the given value. It also does an intersection
 search in the event where one or more fields are provided, that is, the entities found would have the selected values
-for each of the fields you key in
+for each of the fields you key in. This search is case insensitive.
 ****
 
 Examples:
 
-* `find mentor n/Joshua Wong` will display a list of all mentors in the Hackathon who are named "Joshua Wong", or have "Joshua Wong" in their name.
+* `find mentor n/Joshua Wong` will display a list of all mentors in the Hackathon who are named "Joshua Wong",
+or have "Joshua Wong" in their name.
 
-* `find participant n/John Doe` will display a list of all participants in the Hackathon who are named "John Doe", or have "John Doe" in their name.
+* `find participant n/John Doe` will display a list of all participants in the Hackathon who are named "John Doe",
+or have "John Doe" in their name.
 
-* `find team n/FutureHackathonWinner` will display a list of all teams in the Hackathon that are named "FutureHackathonWinner", or have "FutureHackathonWinner" in their name.
+* `find team n/FutureHackathonWinner` will display a list of all teams in the Hackathon that are named "FutureHackathonWinner",
+or have "FutureHackathonWinner" in their name.
 
 Each entity will have different fields available to find.
 
@@ -307,8 +317,57 @@ For mentor, `n/NAME, e/EMAIL, p/PHONE o/ORGANIZATION` are all available
 
 Example for multiple fields:
 
-* `find participant n/Damith e/damith.com` finds all participants whose name contains the string "Damith" (this is case
-sensitive) and whose emails contain "damith.com"
+* `find participant n/Damith e/damith.com` finds all participants
+whose name contains the string "Damith" and whose emails contain "damith.com"
+
+=== Advanced Finding of a Specific Entity by Union or Negative: `find [AND/OR] {mentor/team/participant} n/NAME ... [EXCLUDE] ...`
+
+The default find command for single and multiple fields works via a find by intersection. That is, entities
+must be true for all the predicates for it to be displayed. However, Alfred also supports finding by union.
+
+As above, all find commands are case insensitive.
+
+The commands for this is as such:
+
+* `find participant OR n/Damith e/nus` will do a search for all Participants whose name contains "Damith" or whose
+email contains "nus" in it.
+
+Also do note that for this command, the OR key must be placed before all the arguments to the command. Also,
+the OR key can be replaced by the AND key to do a search by intersection. If none are provided, then a search by
+intersection is done by default. The AND/OR keyword must be in caps.
+
+Next, Alfred also supports negative searches, if you wish to do it. Simply run
+
+* `find mentor n/Boss EXCLUDE e/boss.com` will return all mentors whose name has a "boss"
+and whose email does not contain "boss.com"
+
+Also, you can do negative searches by union as well.
+
+* `find mentor OR n/boss EXCLUDE e/boss.com` will now return all mentors whose
+name has a "boss" in it or whose email does not contain "boss.com"
+
+However, there are also some caveats when it comes to using `find`.
+
+1. The `AND/OR` keyword must be placed at the front before all parameters and the `EXCLUDE` keyword
+2. Anything after the `EXCLUDE` keyword will be processed using negative find.
+3. No `AND/OR` keywords are allowed after the `EXCLUDE` keyword.
+4. You can only search by `AND` or `OR`. You cannot do a search by both `AND` and `OR`
+
+****
+Some notes on the logic used in find.
+
+* The logic used in find obeys normal boolean, probabilistic logic.
+* Hence commands like `find participant n/Ki EXCLUDE n/Ki` will return an empty list
+* Likewise, commands like `find participant OR n/Ki EXCLUDE n/Ki` will return the full list.
+****
+
+Other examples of valid commands are also provided here for your reference:
+
+1. `find team OR EXCLUDE n/ArsenalFC pn/Football` will do a search of all teams whose name does not
+contain "ArsenalFC" or whose project name does not contain "Football".
+2. `find participant AND n/Abramov EXCLUDE e/react` will do a search where participant names contain "Abramov"
+and whose email does not contain "react". In this case, the `AND` keyword could have been omitted because
+the default find does a search by intersection.
 
 //tag::assign[]
 === Assigning a Entity to a Team: `assign {mentor/participant} ID TEAM_ID ...`
@@ -754,6 +813,9 @@ The help command will list all the commands you need to use this
 application properly!
 
 Simply run `help`.
+
+If you want the help window to close, simply run another command that is not `help` and the window
+will close by itself.
 
 //tag::home[]
 === Home command: `home`
